--- a/src/docs/asciidoc/auth.adoc
+++ b/src/docs/asciidoc/auth.adoc
@@ -1,9 +1,10 @@
 = Auth API
 :doctype: book
-:icons:font
+:icons: font
 :source-highlighter: highlightjs
 :toc: left
 :toclevels: 3
+:snippets: ./build/generated-snippets
 
 
 == 📗 로그인
