[None] refactor: restdocs 관련 build.gradle 파일 변경, 주석 추가

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -41,15 +41,15 @@ include::{snippets}/api/members/sign-up/http-request.adoc[]
 
 include::{snippets}/api/members/sign-up/http-response.adoc[]
 
-=== 📗 자신 조회
+=== 📗 LoginId로 조회하기
 
 * Request
 
-include::{snippets}/api/members/myself/http-request.adoc[]
+include::{snippets}/api/members/loginId/http-request.adoc[]
 
 * Response
 
-include::{snippets}/api/members/myself/http-response.adoc[]
+include::{snippets}/api/members/loginId/http-response.adoc[]
 
 === 📗 회원 탈퇴
 
